[package]
name = "glwasm"
version = "0.1.0"
authors = ["Tiamat-KIT <c1101081@planet.kanazawa-it.ac.jp>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen-futures = "0.4.42"
web-sys = {version = "0.3.69",features = [
    'WebGlRenderingContext',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    "WebGl2RenderingContext",
    "WebGlShader",
    "WebGlProgram",
    "WebGlBuffer",
    "WebGlVertexArrayObject",
    "WebGlUniformLocation",
]}
gloo = "0.11.0"
serde-wasm-bindgen = "0.6.5"
serde = {version = "1.0.204",features = ["derive"] } 
tsify = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
